fixed spacing issues

--- a/css/site.css
+++ b/css/site.css
@@ -1,7 +1,8 @@
 html,
 body {
     height: 100%;
-    overflow-x: hidden;
+    overflow: auto;
+    overflow: initial;
 }
 
 body {
